Final version: Complete OOP implementation for portfolio submission
- Full MVC architecture with Repository Pattern
- 1000+ comprehensive unit and integration tests
- Automotive infotainment UI with SVG-based dynamic roadmap
- Exam registration system with two-stage dropdown
- Complete OOP principles: composition, aggregation, inheritance, polymorphism
- Flask backend with SQLite database
- Responsive frontend with vanilla JavaScript

This version represents the finalized portfolio project for
IU Internationale Hochschule - Object-Oriented Programming with Python

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,41 @@
 # Database files
 *.db
 *.sqlite
+*.db-journal
+*.db-wal
+*.db-shm
 dashboard.db
 
 # Python
 __pycache__/
 *.py[cod]
+*.pyo
 .pytest_cache/
+
+# Virtual Environments
+venv/
+.venv/
+env/
 
 # IDE
 .idea/
+.vscode/
+*.swp
+*~
 
-# Environment
+# Environment & Secrets
 .env
+.env.local
+.env.*.local
+# ABER: .env.example soll NICHT ignoriert werden!
+!.env.example
+
+# Logs
+*.log
+
+# Backups
+*.bak
+*_backup_*
 
 # macOS
 .DS_Store
