--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 # ============================================================================
 Flask==3.0.0
 Flask-Login==0.6.3
-Flask-Mail==0.9.1
+Flask-Mailman==0.3.0
 Flask-WTF==1.2.1
 
 # Flask Dependencies
