Refactor: Move database to data/ directory for consistency

--- a/.env.example
+++ b/.env.example
@@ -38,4 +38,4 @@ MAIL_DEFAULT_SENDER="Studiennavigator <noreply@your-domain.org>"
 # DATABASE
 # ============================================================================
 # Pfad zur SQLite-Datenbank (relativ zum Projektroot)
-DATABASE_PATH=dashboard.db
+DB_PATH=data/dashboard.db
