docs: final preparation for submission

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,12 @@ MAIL_DEFAULT_SENDER="Studiennavigator <noreply@your-domain.org>"
 # ============================================================================
 # Pfad zur SQLite-Datenbank (relativ zum Projektroot)
 DB_PATH=data/dashboard.db
+
+# Domain Konfiguration
+PREFERRED_URL_SCHEME=https
+SERVER_NAME=your-domain.org
+
+# Session Konfiguration
+SESSION_COOKIE_SECURE=1
+SESSION_COOKIE_HTTPONLY=1
+SESSION_COOKIE_SAMESITE=Lax
